--- a/location.html
+++ b/location.html
@@ -19,15 +19,45 @@
   </head>
   <body>
     <main>
-      <div>
-        <img src="./assets/mobile/image-map.png" alt="map with location" />
-      </div>
+      <main>
+        <div>
+          <div>
+            <div></div>
+            <div>
+              <p>Back to Home</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h1>Our location</h1>
+          <div>
+            <h2>99 King Street</h2>
+            <p>Newport<br />RI 02840<br />United States of America</p>
+            <p>
+              Our newly opened gallery is located near the Edward King House on
+              99 King Street, the Modern Art Gallery is free to all visitors and
+              open seven days a week from 8am to 9pm.
+            </p>
+          </div>
+        </div>
+        <div>
+          <div>
+            <h3>Modern Art Gallery</h3>
+            <p>
+              The Modern Art Gallery is free to all visitors and open seven days
+              a week from 8am to 9pm.
+            </p>
+          </div>
+          <div>
+            <ul>
+              <li><img src="./assets/icon-facebook.svg" alt="" /></li>
+              <li><img src="./assets/icon-instagram.svg" alt="" /></li>
+              <li><img src="./assets/icon-twitter.svg" alt="" /></li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </main>
-    Back to Home Our location 99 King Street Newport RI 02840 United States of
-    America Our newly opened gallery is located near the Edward King House on 99
-    King Street, the Modern Art Gallery is free to all visitors and open seven
-    days a week from 8am to 9pm. Modern Art Gallery The Modern Art Gallery is
-    free to all visitors and open seven days a week from 8am to 9pm. Find us at
-    99 King Street, Newport, USA.
+    Find us at 99 King Street, Newport, USA.
   </body>
 </html>
