Fix some issues on location page

--- a/location.html
+++ b/location.html
@@ -23,16 +23,20 @@
   </head>
   <body>
     <main class="main-container">
-      <header class="location-container">
-        <div class="button-container">
-          <div class="button-container__array">
-            <img src="./assets/icon-arrow-left.svg" alt="arrow left" />
-          </div>
-          <div class="button-container__text">
-            <p class="button__text">Back to Home</p>
-          </div>
-        </div>
-      </header>
+      <div class="div-1">
+        <header class="location-container">
+          <a href="./index.html">
+            <div class="button-container">
+              <div class="button-container__array">
+                <img src="./assets/icon-arrow-left.svg" alt="arrow left" />
+              </div>
+              <div class="button-container__text">
+                <p class="button__text">Back to Home</p>
+              </div>
+            </div>
+          </a>
+        </header>
+      </div>
       <section class="main-article">
         <h1 class="main-article__heading">Our location</h1>
         <div>
@@ -70,7 +74,6 @@
               <i class="fa fa-twitter"></i>
             </li>
           </ul>
-        <!-- </div> -->
       </footer>
     </main>
   </body>
