Done responsive design

--- a/location.html
+++ b/location.html
@@ -52,28 +52,27 @@
         </div>
       </section>
       <footer class="main-footer">
-        <div class="main-footer__container">
-          <h3 class="main-footer__heading">
-            Modern<br />
-            Art Gallery
-          </h3>
-          <p class="main-footer__text">
-            The Modern Art Gallery is free to all visitors and open seven days a
-            week from 8am to 9pm.
-          </p>
+        <!-- <div class="main-footer__container"> -->
+        <h3 class="main-footer__heading">
+          Modern<br />
+          Art Gallery
+        </h3>
+        <p class="main-footer__text">
+          The Modern Art Gallery is free to all visitors and open seven days a
+          week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+        </p>
         <!-- </div> -->
-        <div class="social-container">
-          <ul class="social-list">
-            <li class="social-list__item">
-              <i class="fa fa-facebook-official"></i>
-            </li>
-            <li class="social-list__item">
-              <i class="fa fa-instagram"></i>
-            </li>
-            <li class="social-list__item">
-              <i class="fa fa-twitter"></i>
-            </li>
-          </ul>
+        <ul class="social-list">
+          <li class="social-list__item">
+            <i class="fa fa-facebook-official"></i>
+          </li>
+          <li class="social-list__item">
+            <i class="fa fa-instagram"></i>
+          </li>
+          <li class="social-list__item">
+            <i class="fa fa-twitter"></i>
+          </li>
+        </ul>
       </footer>
     </main>
   </body>
