--- a/index.html
+++ b/index.html
@@ -18,13 +18,62 @@
     <title>Frontend Mentor | Art gallery website</title>
   </head>
   <body>
-    Modern Art Gallery The arts in the collection of the Modern Art Gallery all
-    started from a spark of inspiration. Will these pieces inspire you? Visit us
-    and find out. Our location Your day at the gallery Wander through our
-    distinct collections and find new insights about our artists. Dive into the
-    details of their creative process. Come &amp; be inspired We’re excited to
-    welcome you to our gallery and see how our collections influence you. Modern
-    Art Gallery The Modern Art Gallery is free to all visitors and open seven
-    days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+    <main class="main-container">
+      <header>
+        <h1>Modern Art Gallery</h1>
+        <p>
+          The arts in the collection of the Modern Art Gallery all started from
+          a spark of inspiration. Will these pieces inspire you? Visit us and
+          find out.
+        </p>
+        <a href="./location.html">
+          <div class="button-container">
+            <div class="button-container__array">
+              <img src="./assets/icon-arrow-right.svg" alt="arrow left" />
+            </div>
+            <div class="button-container__text">
+              <p class="button__text">Our location</p>
+            </div>
+          </div>
+        </a>
+      </header>
+      <img src="./assets/mobile/image-grid-1.jpg" alt="grid image" />
+      <section>
+        <h2>Your day <br />at the gallery</h2>
+        <p>
+          Wander through our distinct collections and find new insights about
+          our artists. Dive into the details of their creative process.
+        </p>
+      </section>
+      <img src="./assets/mobile/image-grid-2.jpg" alt="" />
+      <div>
+        <img src="./assets/mobile/image-grid-3.jpg" alt="" />
+        <article>
+          <h2>Come &amp; be <br />inspired</h2>
+          <p>
+            We’re excited to welcome you to our gallery and see how our
+            collections influence you.
+          </p>
+        </article>
+      </div>
+      <footer>
+        <h3>Modern Art <br />Gallery</h3>
+        <p>
+          The Modern Art Gallery is free to all visitors and open seven days a
+          week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+        </p>
+        <ul class="social-list">
+          <li class="social-list__item">
+            <i class="fa fa-facebook-official"></i>
+          </li>
+          <li class="social-list__item">
+            <i class="fa fa-instagram"></i>
+          </li>
+          <li class="social-list__item">
+            <i class="fa fa-twitter"></i>
+          </li>
+        </ul>
+      </footer>
+    </main>
   </body>
 </html>
