--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main-container">
       <header class="main-header">
         <div class="div-1">
-          <h1 class="main-header__heading">Modern Art Gallery</h1>
+          <h1 class="main-header__heading">Modern <br />Art Gallery</h1>
           <p class="main-header__text">
             The arts in the collection of the Modern Art Gallery all started
             from a spark of inspiration. Will these pieces inspire you? Visit us
@@ -43,36 +43,42 @@
           </a>
         </div>
       </header>
-      <img
-        src="./assets/mobile/image-grid-1.jpg"
-        alt="grid image"
-        class="img-1"
-      />
       <section class="main-article__container">
-        <h2 class="main-article__heading">Your day <br />at the gallery</h2>
-        <p class="main-article__text">
-          Wander through our distinct collections and find new insights about
-          our artists. Dive into the details of their creative process.
-        </p>
-      </section>
-      <img
-        src="./assets/mobile/image-grid-2.jpg"
-        alt="grid image 2"
-        class="img-2"
-      />
-      <section>
         <img
-          src="./assets/mobile/image-grid-3.jpg"
-          alt="grid image 3"
-          class="img-3"
+          src="./assets/mobile/image-grid-1.jpg"
+          alt="grid image"
+          class="img-1"
         />
-        <article class="second-article__container">
-          <h2 class="second-article__heading">Come &amp; be <br />inspired</h2>
-          <p class="second-article__text">
-            We’re excited to welcome you to our gallery and see how our
-            collections influence you.
+        <div>
+          <h2 class="main-article__heading">Your day <br />at the gallery</h2>
+          <p class="main-article__text">
+            Wander through our distinct collections and find new insights about
+            our artists. Dive into the details of their creative process.
           </p>
-        </article>
+        </div>
+      </section>
+      <section class="second-article">
+        <img
+          src="./assets/mobile/image-grid-2.jpg"
+          alt="grid image 2"
+          class="img-2"
+        />
+        <div>
+          <img
+            src="./assets/mobile/image-grid-3.jpg"
+            alt="grid image 3"
+            class="img-3"
+          />
+          <article class="second-article__container">
+            <h2 class="second-article__heading">
+              Come &amp; be <br />inspired
+            </h2>
+            <p class="second-article__text">
+              We’re excited to welcome you to our gallery and see how our
+              collections influence you.
+            </p>
+          </article>
+        </div>
       </section>
     </main>
     <footer class="main-footer">
