Before desktop responsive design

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <title>Frontend Mentor | Art gallery website</title>
   </head>
   <body>
-    <main class="main-container">
-      <header class="main-header">
-        <div class="div-1">
-          <h1 class="main-header__heading">Modern <br />Art Gallery</h1>
+    <header class="main-header">
+      <div class="div-1">
+        <h1 class="main-header__heading">Modern <br />Art Gallery</h1>
+        <div class="div-2">
           <p class="main-header__text">
             The arts in the collection of the Modern Art Gallery all started
             from a spark of inspiration. Will these pieces inspire you? Visit us
@@ -42,7 +42,9 @@
             </div>
           </a>
         </div>
-      </header>
+      </div>
+    </header>
+    <main class="main-container">
       <section class="main-article__container">
         <img
           src="./assets/mobile/image-grid-1.jpg"
