Before resolve header background issue

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
         <img
           src="./assets/mobile/image-grid-1.jpg"
           alt="grid image"
-          class="img-1"
+          class="img-1-mobile"
+        />
+        <img
+          src="./assets/desktop/image-grid-1.jpg"
+          alt="grid image"
+          class="img-1-desktop"
         />
         <div>
           <h2 class="main-article__heading">Your day <br />at the gallery</h2>
